# hartford_demo

./: README.md  app.py  db.py  jobs.json  main.py  pyproject.toml  scrape.py
sql/: create_dimensions.sql  create_fact_jobs.sql  create_staging.sql  load_star_schema.sql
sql/queries/: avg_salary.sql  avg_salary_by_category.sql  avg_salary_by_category_location.sql  avg_salary_by_location.sql  avg_salary_by_work_mode.sql  category_by_location.sql  category_by_work_mode.sql  full_export.sql  jobs_by_category.sql  jobs_by_location.sql  jobs_by_work_mode.sql  top_salary_jobs.sql  work_mode_by_category.sql
static/: style.css
templates/: index.html
